# gd2dist

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST  README.md  Untitled.ipynb  proba.py  proba.sh  setup.py  tests.sh  upload.sh  wheel.sh
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
examples/paper/: Deconvolution.eps  Paper_analysis.ipynb  README.md  auxiliar_functions.py  auxiliar_metrics.py  auxiliar_neumman.py  auxiliar_synthetic_data_distributions.py  sessioninfo.txt  synthetic_data_pdf.py
examples/paper/Output/Samples/: Real2_dataChiDye2_Dye_0.pickle  Real2_dataChiDye2_Dye_1.pickle  Real2_dataChiDye2_Dye_2.pickle  Real2_dataChiDye2_dataChi2_0.pickle  Real2_dataChiDye2_dataChi2_1.pickle  Real2_dataChiDye2_dataChi2_2.pickle  Real2_dataChiDye_Dye_0.pickle  Real2_dataChiDye_Dye_1.pickle  Real2_dataChiDye_Dye_2.pickle  Real2_dataChiDye_dataChi_0.pickle  Real2_dataChiDye_dataChi_1.pickle  Real2_dataChiDye_dataChi_2.pickle  Real2_dataDye2_data2_0.pickle  Real2_dataDye2_data2_1.pickle  Real2_dataDye2_data2_2.pickle  Real2_dataDye_data_0.pickle  Real2_dataDye_data_1.pickle  Real2_dataDye_data_2.pickle  RealDataset1_mcmc_gamma0.pickle  RealDataset1_mcmc_gamma1.pickle  RealDataset1_mcmc_gamma2.pickle  RealDataset1_nested_gamma2.pickle  RealDataset1_nested_normal2.pickle
examples/paper/Output/Tables/: Synthetic_data_scores copy.csv  Synthetic_data_scores.csv
examples/paper/Simulations/: RealDataset1_mcmc_gamma1.pickle  RealDataset1_mcmc_normal.pickle  RealDataset1_mcmc_normal0.pickle  RealDataset1_mcmc_normal1.pickle  RealDataset1_mcmc_normal2.pickle  RealDataset1_nested_gamma0.pickle  RealDataset1_nested_gamma1.pickle  RealDataset1_nested_normal0.pickle  RealDataset1_nested_normal1.pickle
src/gaussiandeconvolution/mcmcsampler/: functions.h  mcmcsampler.cpp  mcmcsampler.h  mcmcsampler.py  mcmcsampler_wrapper.cpp  probability_distributions.cpp
src/gaussiandeconvolution/mcmcsampler/cpp_functions/: functions.cpp  mcmcsampler.cpp  mcmcsampler.h  mcmcsampler_wrapper.cpp
src/gaussiandeconvolution/nestedsampler/: __init__.py  gdposteriormodel.cpp  gdposteriormodel.h  gdposteriormodel_wrapper.cpp  nestedsampler.py
src/gaussiandeconvolution/shared_functions/: gd_samplers.cpp  gd_samplers.h  gd_samplers_wrapper.cpp  gd_scorers.cpp  gd_scorers.h  general_functions.cpp  general_functions.h  mcmc_convergence_statistics.cpp  probability_distributions.cpp  probability_distributions.h  shared_functions_wrapper.cpp
src/gd2dist/: __init__.py
src/gd2dist/mcmcsampler/: mcmcsampler.cpp  mcmcsampler.py  mcmcsampler_wrapper.cpp
src/gd2dist/mcmcsamplergamma/: __init__.py  mcmcsamplergamma.cpp  mcmcsamplergamma.h  mcmcsamplergamma.py  mcmcsamplergamma_wrapper.cpp
src/gd2dist/mcmcsamplernorm/: mcmcsamplernorm.cpp  mcmcsamplernorm.h  mcmcsamplernorm.py  mcmcsamplernorm_wrapper.cpp
src/gd2dist/nestedsampler/: gdposteriormodel.cpp  gdposteriormodel_wrapper.cpp  nestedsampler.py
src/gd2dist/nestedsamplergamma/: gdposteriormodelgamma.cpp  gdposteriormodelgamma.h  gdposteriormodelgamma_wrapper.cpp  nestedsamplergamma.py
src/gd2dist/nestedsamplernorm/: gdposteriormodelnorm.cpp  gdposteriormodelnorm.h  gdposteriormodelnorm_wrapper.cpp  nestedsamplernorm.py
src/gd2dist/shared_functions/: gd_samplers.cpp  gd_samplers.h  gd_scorers.cpp  probability_distributions.cpp  probability_distributions.h  shared_functions_wrapper.cpp
src/scBayesDec/mcmcsamplergamma/: mcmcsamplergamma.py
